Fixed the font color in dark mode.
Made plans.

--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -17,7 +17,7 @@
 
 .tidy5e-kgar {
   &.sheet form {
-    color: var(--t5e-primary-font);
+    color: var(--t5ek-primary-font);
     background: var(--t5ek-sheet-background);
   }
 
